fix #2732 - show scrollbar if necessary in toggle_cart, toggle_wishlist, toggle_accout and toggle_settings for tpl_modified_nova
git-svn-id: https://svn.modified-shop.org/svn/modified-shop/trunk@15839 79ac0487-9261-4f26-a34d-858dee0dcce0

--- a/templates/tpl_modified_nova/stylesheet.css
+++ b/templates/tpl_modified_nova/stylesheet.css
@@ -1992,7 +1992,8 @@ input[type=text]:focus, input[type=password]:focus, input[type=email]:focus, inp
   overflow: auto;
   -webkit-overflow-scrolling: touch;
   max-width:100%;
-  padding:50px 20px 70px 20px;
+  padding:50px 11px 70px 20px;
+  border-right: 9px solid transparent;
   background:#fafafa;
   color:#333;
   right:-440px;
@@ -2026,7 +2027,7 @@ input[type=text]:focus, input[type=password]:focus, input[type=email]:focus, inp
   border-radius:4px;
   position:absolute;
   top:15px;
-  right:20px;
+  right:11px;
   font-size:20px;
   line-height:30px;
   text-align:center;
